# kaggle-jane-street-2024

./: README.md  pyproject.toml
src/rtmdf/: api.py  constant.py
src/rtmdf/cal/: create_lags.py  fill_na.py  loss.py  train.py  transform.py  window.py
src/rtmdf/model/: dataset.py  mlp.py  spec.py  v01.py  v02.py  v03.py  v04.py  v05.py  v06.py  v07.py  v08.py  v09.py  v10.py  v11.py  v12.py  v13.py  v20.py  v21.py
src/rtmdf/vis/: cross_section.py
