[build-system]
requires = [
    "setuptools>=61",
    # "setuptools_scm[toml]>=7",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "rtmdf"
version = "0.0.1"
description = "Helper scripts for Kaggle competition Jane Street Real-Time Market Data Forecasting"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "black",
    "gpustat",
    "isort",
    "lightgbm",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "plotly",
    "polars",
    "scikit-learn",
    "scipy",
    "sympy",
    "streamlit",
    "timm",
    "torch @ https://download.pytorch.org/whl/cu124/torch-2.5.1%2Bcu124-cp312-cp312-win_amd64.whl#sha256=3c3f705fb125edbd77f9579fa11a138c56af8968a10fc95834cdd9fdf4f1f1a6",
    "torchaudio @ https://download.pytorch.org/whl/cu124/torchaudio-2.5.1%2Bcu124-cp312-cp312-win_amd64.whl#sha256=cca2de94f232611b20d379edf28befa7a1aa482ae9ed41c3b958b08ed1bf4983",
    "torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.20.1%2Bcu124-cp312-cp312-win_amd64.whl#sha256=0f6c7b3b0e13663fb3359e64f3604c0ab74c2b4809ae6949ace5635a5240f0e5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 120
